5.28.0
NEW
    - Added a toggle for target, target target, focus and focus target castbar
    - Added option to show a separate energy bar for some bosses like Anduin at the objectives boss frames
    - Added Details skin (by SHOODOX)
    - Added GW2 style worldmap and minimap player pin
    - Added option to set a timer to auto scroll down the chat
    - Added option to set the number of chat messages which are scrolled with one scroll

5.27.1
FIXES
    - You can now apply glyphs again
    - Fix a lua error while rename an equipment set

5.27.0
NEW
    - Added option to disable player new de/buff animation

FIXES
    - Some chat issues on russian clients
    - Possible actionbar lua error
    - Possible torghast fix

5.26.0
NEW
    - Make "PowerBarContainer" movable
    - Added individual bar width settings for multibar right 1 and 2

FIXES
    - Fix an issue with the multibar right 1 & 2 mover
    - Fix a chat issue on ruRU clients
    - Fix a lua error with barber skin

5.25.0
NEW
    - Update for 9.2.0
    - Split Inventory Skin and Loot Window Skin
    - Added indicator for unused talent points
    - Added new option 'XP Quest Percent', which shows how much % that quest gives you in relation to the total xp needed for next level
    - Added new option 'Mark Quest Reward', which marks the most valuable quest reward item
    
5.24.2
FIXES
    - Fix rare player aura issue

5.24.1
FIXES
    - Fix player frame background overlay

5.24.0
NEW
    - Added option for alternative target/focus background texture

MISC
    - Tweak character talent frame

5.23.0
NEW
    - Skins:
        - LFG
        - Allied Races
        - Weekly Rewards
        - Chromie Time
    - Added option to change tooltip font size
    - Added option to show "SpellQueueWindow" on castbar

FIXES
    - Fix some cooldown issues for extra action buttons
    - Show correct buffs in vehicle UI
    - Some actionbar hotkey issues

5.22.1
FIXES
    - Fix cooldown lua error

5.22.0
NEW